--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:h2:tcp://localhost/D:/workspace/testdb/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
